base/deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: grafana
spec:
  selector:
    matchLabels:
      app: grafana
  replicas: 1 
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana
        ports:
        - containerPort: 3000
        #volumeMounts:
        #- name: grafana-disk
         # mountPath: /var/lib/grafana
      #securityContext:
        #runAsUser: 1000140000
      #volumes:
      #- name: grafana-disk
      #  persistentVolumeClaim:
      #    claimName: grafana
