base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  selector:
    app: grafana
  ports:
    - name: grafana-port
      protocol: TCP
      port: 3000
      targetPort: 3000
  type: LoadBalancer
